--- a/pinyougou-parent/pom.xml
+++ b/pinyougou-parent/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pinyougou</groupId>
-    <artifactId>pinyougou_parent</artifactId>
+    <artifactId>pinyougou-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
